[package]
name = "aoc2019"
version = "0.1.0"
authors = ["reidswan <reidswan@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["common", "day1", "day2", "day3", "day4", "day5", "day6", "day7"]

[dependencies]
day1 = { path = "day1" }
day2 = { path = "day2" }
day3 = { path = "day3" }
day4 = { path = "day4" }
day5 = { path = "day5" }
day6 = { path = "day6" }
day7 = { path = "day7" }
clap = "^2.33"